--- a/style/git.css
+++ b/style/git.css
@@ -1,9 +1,18 @@
 body{
-    background-image:linear-gradient(30deg, rgba(201, 211, 10, 0.338), rgba(7, 39, 76, 0.9));
+    background-image:linear-gradient(180deg, rgba(229, 14, 50, 0.2), rgba(7, 39, 76, 0.99));
+}
+
+
+nav{
+    transition: background-color 0.2s ease-in-out;
 }
 .card{
     border-radius: 0;
     background-color: black;
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
     border: 0;
 }
+
+.logo {
+    transform: scale(0.4);
+  }
